SI: Fixes for nav-bar disappearing on mobile

--- a/notes-app/style.css
+++ b/notes-app/style.css
@@ -65,7 +65,7 @@ body {
     font-size: 1.2rem;
     /* outline: none; */
     width: 100%;
-    height: 15rem;
+    height: 410px;
     font-family: inherit;
     /* border: none; */
     border: red;
